--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,7 @@
                         <td><a class="text-reset" href="services.html"><i class="bi bi-wrench-adjustable px-3"></i>Services</a></td>
                       </tr>
                       <tr>
-                        <td><a class="text-reset" href="#location"><i class="bi bi-geo-alt px-3"></i>Meet me</a></td>
+                        <td><a class="text-reset" href="index.html#location"><i class="bi bi-geo-alt px-3"></i>Meet me</a></td>
                       </tr>
                     </tbody>
                   </table>
