--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="row p-5 bg-black">
               <div class="col-sm-12 col-md-6 col-lg-6 p-3">
                 <div class="text-left justify-content-center">
-                  <h1 class="custom-heading xl-font">LENISH K J</h1>                
+                  <h1 class="custom-heading xl-font"><span class="oneword">LENISH K J</span></h1>                
                 </div>
                 <div class="logos">
                   <ul class="list-group list-group-horizontal">
