--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="col-12 col-sm-12 col-md-6 justify-content-center py-3">
                     <div class="p-5">
                         <h2 class=" mx-5 custom-font">Hey there,</h2>
-                        <h1 class=" mx-5 custom-font xl-font">I'm LENISH</h1>
+                        <h1 class=" mx-3 custom-font xl-font">I'm LENISH</h1>
                         <h5 class=" mx-5 custom-font center">Django developer | Python developer | pyspark developer</h5>
                     </div>
                     
@@ -122,7 +122,8 @@
             <div class="row p-5 bg-black">
               <div class="col-sm-12 col-md-6 col-lg-6 p-3">
                 <div class="text-left justify-content-center">
-                  <h1 class="custom-heading xl-font"><span class="oneword">LENISH K J</span></h1>                
+                  <h1 class="custom-heading xl-font"><span class="oneword">LENISH</span></h1>                
+                  <h1 class="custom-heading xl-font"><span class="oneword"> K J </span></h1>                
                 </div>
                 <div class="logos">
                   <ul class="list-group list-group-horizontal">
