--- a/projects.html
+++ b/projects.html
@@ -141,8 +141,8 @@
             <div class="row p-5 bg-black">
               <div class="col-sm-12 col-md-6 col-lg-6 p-3">
                 <div class="text-left justify-content-center">
-                  <h1 class="custom-heading xl-font"><span class="oneword">LENISH K J</span></h1>                
-                </div>
+                  <h1 class="custom-heading xl-font"><span class="oneword">LENISH</span></h1>                
+                  <h1 class="custom-heading xl-font"><span class="oneword"> K J </span></h1>                                </div>
                 <div class="logos">
                   <ul class="list-group list-group-horizontal">
                     <a href="https://www.facebook.com/profile.php/?id=100004821062199&name=xhp_nt__fb__action__open_user">
