updated with latest resume and added content to the services page

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="face face2">
                       <div class="content">
-                        <p> A responsive static website for personal portfolio. The website features a home page, an about section, location and  other contact informations with direct access link. There are seperate pages for showcasing the projects done by the admin and the services they provide.</p>
+                        <p> A responsive static website for personal portfolios. The website features a home page, an about section, location, and other contact information with a direct access link. There are separate pages for showcasing the projects done by the admin and the services they provide.</p>
                         <a href="https://github.com/kjlenish/My-Portfolio-HTML.git" type="button">View Source Code</a>
                       </div>
                     </div>
@@ -78,7 +78,10 @@
                     </div>
                     <div class="face face2">
                       <div class="content">
-                        <p> A responsive static website for online shopping and product promotion. The website features a home page, games section that showcases all the playstation games that are available at the store, sports section that showcases all the sports goods available to purchase, subscibe section to fetch the name and email id of customers and a location section that uses google map api to display the location of the store.</p>
+                        <p> A responsive static website for online shopping and product promotion. The website features a home page and a games section that showcases all the games
+                          that are available at the store, a sports section that showcases all the sports goods available to purchase; a subscriber section to fetch the name and email ID
+                          of customers, and a location section that uses the Google Maps API to display
+                          the location of the store.</p>
                         <a href="https://github.com/kjlenish/level4.git" type="button">View Source Code</a>
                       </div>
                     </div>
