--- a/services.html
+++ b/services.html
@@ -51,6 +51,104 @@
             <div class="row py-3">
                 <h1 class="custom-heading xl-font">SERVICES</h1>
             </div>
+
+            <div class="row g-0 py-3">
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>
+                      <h3>Web Development Services</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> Crafting dynamic and responsive websites tailored to meet your unique business needs, utilizing the latest technologies and frameworks.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>        
+                      <h3>Django Development</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> Specializing in Django web application development, from conceptualization to deployment, to provide scalable and efficient solutions.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>
+                      <h3>Custom Software Solutions</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> Developing tailor-made software solutions to address specific business challenges, ensuring efficiency and scalability.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+
+            </div>
+
+            <div class="row g-0 py-3">
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>
+                      <h3>Data Analysis and Visualization</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> Harnessing the power of Python, PySpark, and Pandas to analyze and visualize complex datasets, extracting valuable insights for informed decision-making.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>        
+                      <h3>Full Stack Development</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> End-to-end development services, covering both frontend and backend technologies, ensuring seamless and integrated solutions.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="game-icons:gears"></iconify-icon>
+                      <h3>E-commerce Development</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> Creating robust and user-friendly e-commerce platforms, incorporating secure payment gateways and intuitive user interfaces.</p>
+                      <a href="#footer" type="button">Work with me</a>
+                    </div>
+                  </div>
+              </div>
+            
+            </div>
         </section>
 
         <footer id="footer">
