Updated resume with latest project and resume

--- a/projects.html
+++ b/projects.html
@@ -53,62 +53,27 @@
             <div class="row g-0 py-3">
 
                 <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
-                    <div class="face face1">
-                      <div class="content">
-                        <iconify-icon icon="cib:html5"></iconify-icon>
-                        <h3>My Portfolio</h3>
-                      </div>
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="tabler:brand-django"></iconify-icon>
+                      <h3>Django E-commerce Application</h3>
                     </div>
-                    <div class="face face2">
-                      <div class="content">
-                        <p> A responsive static website for personal portfolios. The website features a home page, an about section, location, and other contact information with a direct access link. There are separate pages for showcasing the projects done by the admin and the services they provide.</p>
-                        <a href="https://github.com/kjlenish/My-Portfolio-HTML.git" type="button">View Source Code</a>
-                      </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> An online shopping platform using Django where users can create their account, browse through variety of
+                        products, view and add items to their shopping cart, view orders and add reviews. Users can checkout the items
+                        in their cart and make the payments through Razor pay.</p>
+                      <a href="https://github.com/kjlenish/Django-Ecommerce-Application.git" type="button">View Source Code</a>
                     </div>
-                </div>
-
-                <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
-                    <div class="face face1">
-                      <div class="content">
-                        <iconify-icon icon="cib:html5"></iconify-icon>        
-                        <h3>Level 4</h3>
-                      </div>
-                    </div>
-                    <div class="face face2">
-                      <div class="content">
-                        <p> A responsive static website for online shopping and product promotion. The website features a home page and a games section that showcases all the games
-                          that are available at the store, a sports section that showcases all the sports goods available to purchase; a subscriber section to fetch the name and email ID
-                          of customers, and a location section that uses the Google Maps API to display
-                          the location of the store.</p>
-                       <a href="https://github.com/kjlenish/level4.git" type="button">View Source Code</a>
-                      </div>
-                    </div>
+                  </div>
                 </div>
 
                 <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
                     <div class="face face1">
                       <div class="content">
                         <iconify-icon icon="tabler:brand-django"></iconify-icon>
-                        <h3>My Portfolio</h3>
-                      </div>
-                    </div>
-                    <div class="face face2">
-                      <div class="content">
-                        <p> A dynamic Django web application for personal portfolio. The application features a home page, an about section, location and  other contact informations with direct access link. There are seperate applications for showcasing the projects done by the admin and the services they provide.</p>
-                        <a href="https://github.com/kjlenish/my-portfolio.git" type="button">View Source Code</a>
-                      </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row g-0 py-3">
-
-                <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
-                    <div class="face face1">
-                      <div class="content">
-                        <iconify-icon icon="tabler:brand-django"></iconify-icon>
-                        <h3>Movie Blogger</h3>
+                        <h3>Django Blogging Application</h3>
                       </div>
                     </div>
                     <div class="face face2">
@@ -118,18 +83,57 @@
                       </div>
                     </div>
                 </div>
-                
+
+                <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="cib:html5"></iconify-icon>        
+                      <h3>Django Notes Application</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> A RESTful API for a note taking application. The API will allow users to register, login and perform basic CRUD
+                        operations (Create, Read, Update, Delete) on the notes. The user can also share their notes with the other users.</p>
+                     <a href="https://github.com/kjlenish/Notes-Application.git" type="button">View Source Code</a>
+                    </div>
+                  </div>
+              </div>
+
+          </div>
+
+            <div class="row g-0 py-3">
+
+
+                <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
+                  <div class="face face1">
+                    <div class="content">
+                      <iconify-icon icon="cib:html5"></iconify-icon>        
+                      <h3>Online Shopping Hub</h3>
+                    </div>
+                  </div>
+                  <div class="face face2">
+                    <div class="content">
+                      <p> A responsive static website for online shopping and product promotion. The website features a home page and a games section that showcases all the games
+                        that are available at the store, a sports section that showcases all the sports goods available to purchase; a subscriber section to fetch the name and email ID
+                        of customers, and a location section that uses the Google Maps API to display
+                        the location of the store.</p>
+                    <a href="https://github.com/kjlenish/level4.git" type="button">View Source Code</a>
+                    </div>
+                  </div>
+              </div>
+
                 <div class="card col-md-4 py-3 m-4" style="width: 19rem;">
                     <div class="face face1">
                       <div class="content">
-                        <iconify-icon icon="tabler:brand-django"></iconify-icon>
-                        <h3>E commerce application</h3>
+                        <iconify-icon icon="cib:html5"></iconify-icon>
+                        <h3>Portfolio</h3>
                       </div>
                     </div>
                     <div class="face face2">
                       <div class="content">
-                        <p> A dynamic Django web application for shopping. Users, or customers, can use the application as an online shopping platform to browse a variety of products, view product details, add items to their shopping cart, receive coupon code discounts after every nth order, and check out to place an order and even make the payment online.</p>
-                        <a type="button">Coming Soon</a>
+                        <p> A responsive static website for personal portfolios. The website features a home page, an about section, location, and other contact information with a direct access link. There are separate pages for showcasing the projects done by the admin and the services they provide.</p>
+                        <a href="https://github.com/kjlenish/My-Portfolio-HTML.git" type="button">View Source Code</a>
                       </div>
                     </div>
                 </div>
