--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row g-0 py-3">
 
                 <div class="col-md-12 col-lg-6 col-xl-6 gallery py-3 g-0">
-                    <img src="https://free4kwallpapers.com/uploads/wallpaper/minimal-dark-coding-wallpaper-2560x1440-wallpaper.jpg" alt="primary.jpg">
+                    <img src="https://media.istockphoto.com/id/1500238408/photo/program-code-development-icon-on-a-digital-lcd-display-with-reflection.jpg?s=612x612&w=0&k=20&c=OSYVC4fFuK1xEsOgaJouboBj28jasyzl8y88UxJdif0=" alt="primary.jpg">
                     <img src="https://images7.alphacoders.com/122/1228014.png" alt="secondary.jpg">
                 </div>
 
